fix word break on main table with loooong URL

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1141,6 +1141,7 @@ table.table-list tbody tr td{
     border-bottom: #EEEEEE 1px solid;
     vertical-align: top;
     word-break: break-all;
+    word-wrap: break-word;
     overflow: hidden;
 }
 
